deploy/onetime-secret/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secrets
  labels:
    app.kubernetes.io/name: onetime-secret
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
